--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,11 @@
 html{
-    background-color: #f5f5f5;
+    background-color: #acacbd70;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-.commande{
-    background-color: #fff;
-    border-radius: 0.25rem;
-    border: 5px solid rgba(100,0,0,0.125);
-    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
-    margin-bottom: 1rem;
-    padding: 1rem;
-}
-.bloccode{
-    background-color: #f5f5f5;
-    border-radius: 0.25rem;
-    border: 5px solid rgba(0,0,255,0.125);
-    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
-    margin-bottom: 1rem;
-    padding: 1rem;
 }
 blockquote{
     font-family: 'Source Code Pro', monospace;
@@ -34,15 +16,15 @@ p{
 }
 
 summary{
-    background-color: #f5f5f5;
+    background-color: #f5f5f585;
     border-radius: 0.25rem;
-    border: 5px solid rgba(0,255,0,0.125);
+    border: 5px solid rgba(0, 255, 0, 0.308);
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
     margin-bottom: 1rem;
     padding: 1rem;
 }
 details[open]{
-    background-color: #f5f5f5;
+    background-color: #f5f5f585;
     border-radius: 0.25rem;
     border: 5px solid rgba(0,255,0,0.125);
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
